--- a/Aboutus.html
+++ b/Aboutus.html
@@ -120,7 +120,7 @@
 								<p>First year HCI DM Track Masters candidate at Georgia Tech, Yvonne is an avid animal lover and art enthusiastic. One of the animals that brings her most joy is the husky puppy. Fluffy puppies will brighten anyone's day and hoards of puppy pictures will whisk you away to happier places.When she is not working hard to spur on her WebDev/UX/UI career or looking at cute puppers, she loves to explore local art galleries and revel in the works of masters across many ages. Can you guess from her portrait what one of her favorite pieces is?
 
 </p>
-								<a href="#" class="tran3s"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+								<a href="https://www.yvonnewang.me/" class="tran3s"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
 							</div>
 						</div> <!-- /.row -->
 					</div> <!-- /.single-service -->
