--- a/Aboutus.html
+++ b/Aboutus.html
@@ -137,7 +137,7 @@
                             <div class="col-md-6 col-xs-12 text">
 								<h3>Grace A. Halverson</h3>
 								<p>First year DM Masters candidate at Georgia Tech, Grace is a quirky squirrel and cat lover who enjoys making of all kinds, from crafting to learning a little coding. One of the biggest bonuses of moving from a small town to a bit city meant that there were more galleries and art museums to explore.Although she is not contemporary art's biggest fan, she values the exposure to current artists and their works and enjoys novel experiences. That being said, it is always nice to know what local galleries might be housing pieces from gothic or romantic periods. If you ask her who her favorite artist is, she would give you a list of artists that have nothing in common, save that they evolved over time and shamelessly created controversial content simply because they wanted to and saw beauty beyond what was trending at their time. Long live the revolutionaries and long live squirrels!</p>
-								<a href="#" class="tran3s"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+								<a href="https://gracehalver.wixsite.com/website" class="tran3s"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
 							</div>
 						</div> <!-- /.row -->
 					</div> <!-- /.single-service -->
