--- a/Map.html
+++ b/Map.html
@@ -116,7 +116,7 @@
 							<div class="single-blog">
 								<div class="image"><img src="images/blog/1.png" alt=""></div>
 								<div class="text">
-									<h6>Mordern</h6>
+									<h6>Modern</h6>
 									<h5><a href="https://www.high.org/" class="tran3s">High Museum of Art</a></h5>
 									<p>The High Museum of Art, located in Atlanta, is a leading art museum in the Southeastern United States. Located on Peachtree Street in Midtown, the city's arts district, the High is a division of the Woodruff Arts Center. In 2010 it had 509,000 visitors, 95th among world art museums</p>
 									<a href="high museum of art.html" class="tran3s"><i class="flaticon-arrows" aria-hidden="true"></i></a>
@@ -134,7 +134,7 @@
 							<div class="single-blog">
 								<div class="image"><img src="images/blog/3.png" alt=""></div>
 								<div class="text">
-									<h6>Mordern</h6>
+									<h6>Modern</h6>
 									<h5><a href="https://www.museumofdesign.org" class="tran3s">Museum of Design Atlanta (MODA)</a></h5>
 									<p>The Museum of Design Atlanta is a design museum located at 1315 Peachtree Street in Atlanta, Georgia, United States. MODA is the only museum in the Southeast devoted exclusively to the study and celebration of all things design.</p>
 									<a href="https://www.museumofdesign.org" class="tran3s"><i class="flaticon-arrows" aria-hidden="true"></i></a>
